@@ -55,6 +55,16 @@ name|javax
 operator|.
 name|swing
 operator|.
+name|DefaultComboBoxModel
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
 name|JOptionPane
 import|;
 end_import
@@ -91,6 +101,20 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|map
+operator|.
+name|EntityResolver
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|modeler
 operator|.
 name|ProjectController
@@ -110,6 +134,22 @@ operator|.
 name|util
 operator|.
 name|CayenneController
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|modeler
+operator|.
+name|util
+operator|.
+name|CellRenderers
 import|;
 end_import
 
@@ -160,7 +200,7 @@ name|DbEntity
 name|source
 decl_stmt|;
 specifier|protected
-name|ProjectController
+name|CayenneController
 name|mediator
 decl_stmt|;
 specifier|protected
@@ -255,6 +295,14 @@ name|source2
 operator|=
 name|source2
 expr_stmt|;
+name|EntityResolver
+name|resolver
+init|=
+name|mediator
+operator|.
+name|getEntityResolver
+argument_list|()
+decl_stmt|;
 name|this
 operator|.
 name|relTargets
@@ -263,10 +311,7 @@ operator|new
 name|ArrayList
 argument_list|<>
 argument_list|(
-name|source1
-operator|.
-name|getDataMap
-argument_list|()
+name|resolver
 operator|.
 name|getDbEntities
 argument_list|()
@@ -282,6 +327,51 @@ name|getNamedObjectComparator
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|DbEntity
+index|[]
+name|dbEntities
+init|=
+name|relTargets
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|DbEntity
+index|[
+literal|0
+index|]
+argument_list|)
+decl_stmt|;
+name|DefaultComboBoxModel
+argument_list|<
+name|DbEntity
+argument_list|>
+name|dbModel
+init|=
+operator|new
+name|DefaultComboBoxModel
+argument_list|<>
+argument_list|(
+name|dbEntities
+argument_list|)
+decl_stmt|;
+name|view
+operator|.
+name|targetCombo
+operator|.
+name|setRenderer
+argument_list|(
+name|CellRenderers
+operator|.
+name|entityListRendererWithIcons
+argument_list|(
+name|mediator
+operator|.
+name|getCurrentDataMap
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|view
 operator|.
 name|targetCombo
@@ -289,27 +379,15 @@ operator|.
 name|removeAllItems
 argument_list|()
 expr_stmt|;
-for|for
-control|(
-name|DbEntity
-name|d
-range|:
-name|relTargets
-control|)
-block|{
 name|view
 operator|.
 name|targetCombo
 operator|.
-name|addItem
+name|setModel
 argument_list|(
-name|d
-operator|.
-name|getName
-argument_list|()
+name|dbModel
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 specifier|private
 name|void
