@@ -40,6 +40,7 @@ CAY-2472 Clear cached replacement query on mutation in all indirect queries
 CAY-2476 Modeller: Fixed wrong behaviour of code generation dialog
 CAY-2480 cayenne:cdbgen and cayenne:cgen have identical text in cayenne-maven-plugin
 CAY-2484 maven plugins missing in 4.1.M2 release
+CAY-2490 Added dbEntities from other datamaps in dbRelationship dialog.
 
 ----------------------------------
 Release: 4.1.M2
